vlib/v/checker/tests/nil_compare_err.vv
a := [12, 34, 56]

if a != unsafe { nil } {
	println(a)
}

if 23 > unsafe { nil } {
	println('hey')
}
